client dockerfile fixed

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,11 @@
 FROM node:14
 WORKDIR /usr/src/app
 
+COPY ./client/package.json ./
+RUN npm install --production --loglevel warn
+
 COPY ./client/ ./
-RUN next build
+RUN yarn build
 
 EXPOSE 3000
-CMD ["next", "start"]
+CMD ["yarn", "start"]
