--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "next": "9.5.3",
     "next-connect": "^0.9.0",
