--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "eventsource": "^1.0.7",
     "next": "9.5.3",
     "next-connect": "^0.9.0",
     "react": "16.13.1",
